# DB_OperatingSYS

./: AddWindow.cpp  AddWindow.h  CMakeLists.txt  CreateWindow.cpp  CreateWindow.h  DeleteWindow.cpp  DeleteWindow.h  FileViewer.cpp  FileViewer.h  LineDeletion.cpp  LineDeletion.h  MainWindow.cpp  MainWindow.h  OpenWindow.cpp  OpenWindow.h  commands.txt  editWindow.cpp  editWindow.h  main.cpp  multifile_functions.h  trash.h  zipWindow.cpp  zipWindow.h
